Changed the cleanuptask to use the HttpClient from the JDK and use SSL (ignoring errors).